--- a/res/layout/activity_receive_data.xml
+++ b/res/layout/activity_receive_data.xml
@@ -40,4 +40,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:gravity="center"/>
+    
+    
+    <Button
+        android:id="@+id/back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
+        android:text="提交对象(Parcelable)"/>
 </LinearLayout>
